fix alignment issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -377,7 +377,7 @@ html,body {
   	height: auto;
   	border-radius: 6px;
 	bottom: 5.5em;
-	left: 68em;
+	left: 71em;
 	padding: 0;	
 	color: black;
 	padding: 1em;
